...
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.77" />

        <com.aptatek.pkulab.widget.HeaderView
            android:id="@+id/header"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/home.margin.top"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <ImageView
            android:id="@+id/playIcon"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/general.distance.xsmall"
            android:src="@drawable/ic_bubble_play"
            android:visibility="invisible"
            app:layout_constraintBottom_toTopOf="@id/chartGuide"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/header"
            tools:ignore="ContentDescription" />

        <com.yarolegovich.discretescrollview.DiscreteScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/general.distance.xsmall"
            app:layout_constraintBottom_toTopOf="@id/chartGuide"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
...
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/scrollView"
            tools:text="Test" />

        <Button
            android:id="@+id/bigSettingsButton"
            style="@style/Grey.Settings.Button.Big"
            android:layout_width="0dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <Button
            android:id="@+id/settingsButton"
            style="@style/Grey.Settings.Button"
            android:layout_width="@dimen/general.button.height.big"
            android:layout_height="@dimen/general.button.height.big"
            android:layout_marginStart="@dimen/general.distance.32dp"
            android:layout_marginEnd="@dimen/general.distance.xsmall"
            android:layout_marginBottom="@dimen/main.bottom.margin"
            android:elevation="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/newTestButton" />

        <Button
            android:id="@+id/exportButton"
            style="@style/Grey.Settings.Button.Big"
            android:layout_width="0dp"
            android:layout_marginBottom="12dp"
...
            android:text="@string/main.button.new.test"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/settingsButton"
            app:layout_constraintRight_toRightOf="parent" />

        <Button
            android:id="@+id/weeklyButton"
            style="@style/General.Rounded.Gray.Button.Secondary"
            android:layout_width="0dp"
            android:layout_marginStart="@dimen/general.distance.32dp"
            android:layout_marginTop="@dimen/general.distance.20dp"
            android:layout_marginEnd="@dimen/general.distance.32dp"
            android:layout_marginBottom="@dimen/general.distance.20dp"
...
