...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5"
        tools:text="501+" />

    <TextView
        android:id="@+id/subtitle"
        style="@style/RangeInfo.Row.Name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/general.distance.small"
        app:layout_constraintBaseline_toBaselineOf="@+id/title"
        app:layout_constraintEnd_toEndOf="parent"
...
