...
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/turnReaderOnSkip"
        style="@style/General.Rounded.Button"
        android:layout_width="0dp"
        android:layout_margin="@dimen/general.distance.32dp"
        android:text="@string/test.button.skip"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
...
